test/classes/delete-free/undecorated-generic/duplicate-management-owned.future
bug: should report duplicate management for owned(borrowed/unmanaged)
